Refactoring: join token to balance
